--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link
       rel="preload"
-      href="/font/NyghtSerif-Regular.woff"
+      href="/font/NyghtSerif-Regular.woff2"
       as="font"
-      type="font/woff"
+      type="font/woff2"
       crossorigin
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
